Fixed experience timeline image alignment

--- a/css/timeline.css
+++ b/css/timeline.css
@@ -105,7 +105,7 @@ Main components
 .cd-timeline-img {
   position: absolute;
   top: 8px;
-  left: 12px;
+  left: 17px;
   width: 20px;
   height: 20px;
   border-radius: 50%;
